--- a/gns3.yaml
+++ b/gns3.yaml
@@ -16,8 +16,8 @@ services:
     networks:
       - local-dhcp
     ports:
-      - "3080:3080"
-      - "5000-5050:5000-5050"
+      - "3080:3080" # API Port
+      - "5000-5050:5000-5050" # For Telnet
     depends_on:
       - dhcp-server
 
